--- a/index.html
+++ b/index.html
@@ -93,10 +93,9 @@
                             <img class="app-section__image_large" src="images/App%20image.png" alt="">
                         </div>
                         <div class="app-section__content">
-                            <h2 class="app-section__heading"><span class="primary-blue">Complete</span> Order and make Payment
+                            <h2 class="app-section__heading"><span class="primary-blue">Make Payment of $4.5</span> to complete order
                             </h2>
-                            <h3 class="app-section__subheading">One app with all the <b>best crypto features</b> already
-                                built into it.</h3>
+                            <h3 class="app-section__subheading">We have what you like <b></h3>
                             <div clas="apps">
                                 
                                    
